deployments/k8s/app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: real-estate-management
  namespace: real-estate-prod
spec:
  replicas: 1
  selector:
    matchLabels:
      app: real-estate-management
  template:
    metadata:
      labels:
        app: real-estate-management
    spec:
      imagePullSecrets:
        - name: ghcr-secret
      containers:
        - name: real-estate-management
          image: ghcr.io/mohsinfiroz/real-estate-management:latest
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: real-estate-management
  namespace: real-estate-prod
spec:
  selector:
    app: real-estate-management
  ports:
    - protocol: TCP
      port: 80    # External port
      targetPort: 8080   # Container port
  type: NodePort  # Change to NodePort if needed

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: real-estate-ingress
  namespace: real-estate-prod
spec:
  rules:
    - host: real-estate-managemt.app.softcelia.com  # Change to your domain
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: real-estate-management
                port:
                  number: 80
